force-app/main/default/objects/Split_Group_Members__c/Split_Group_Members__c.object-meta.xml
<CustomObject>
    <label>Split Group Member</label>
    <nameField>
        <displayFormat>GM-{0000}</displayFormat>
        <label>Split Group Members Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Split Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>