force-app/main/default/objects/Split_Group_Members__c/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <label>Member Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>