force-app/main/default/objects/Split_Group_Members__c/fields/Split_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Split_Group_Name__c</fullName>
    <label>Split Group Name</label>
    <referenceTo>Split_Group__c</referenceTo>
    <relationshipLabel>Split Group Members</relationshipLabel>
    <relationshipName>Split_Group_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>