force-app/main/default/objects/Split_Group_Members__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Split_Group_Name__c</columns>
    <columns>Member_Name__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>